k8s-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geospatial
  labels:
    app.kubernetes.io/name: geospatial
    app.kubernetes.io/part-of: geospatial
